--- a/pom.xml
+++ b/pom.xml
@@ -90,9 +90,20 @@
 			<artifactId>mockito-core</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/net.aksingh/owm-japis -->
-		<!-- <dependency> <groupId>net.aksingh</groupId> <artifactId>owm-japis</artifactId> 
-			<version>2.5.2.3</version> </dependency> -->
+		<dependency>
+			<groupId>net.aksingh</groupId>
+			<artifactId>owm-japis</artifactId>
+			<version>2.5.2.3</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/owm-japis-2.5.2.3.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>ap</groupId>
+			<artifactId>libForecastService</artifactId>
+			<version>1.0.0</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/lib/libForecastService-1.0.0.jar</systemPath>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -100,14 +111,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
