--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
 			<artifactId>converter-gson</artifactId>
 			<version>2.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>21.0</version>
+		</dependency>
 
 	</dependencies>
 
